force-app/main/default/objects/object194__c/object194__c.object-meta.xml
<CustomObject>
    <label>Object194</label>
    <nameField>
        <label>NameField</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects194</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>