force-app/main/default/objects/object194__c/fields/testfield16__c.field-meta.xml
<CustomField>
    <fullName>testfield16__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield16</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object194_testfield16s</relationshipLabel>
    <relationshipName>object194_testfield16s</relationshipName>
    <type>Lookup</type>
</CustomField>