force-app/main/default/objects/object194__c/fields/testfield26__c.field-meta.xml
<CustomField>
    <fullName>testfield26__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield26</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object194_testfield26s</relationshipLabel>
    <relationshipName>object194_testfield26s</relationshipName>
    <type>Lookup</type>
</CustomField>