force-app/main/default/objects/object194__c/fields/testfield66__c.field-meta.xml
<CustomField>
    <fullName>testfield66__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield66</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object194_testfield66s</relationshipLabel>
    <relationshipName>object194_testfield66s</relationshipName>
    <type>Lookup</type>
</CustomField>